--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/ClientRuntime.Azure.Authentication.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/ClientRuntime.Azure.Authentication.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveDirectoryApplicationTokenProvider.cs" />
+    <Compile Include="ActiveDirectoryParameters.cs" />
     <Compile Include="ActiveDirectoryUserTokenProvider.cs" />
     <Compile Include="ApplicationTokenCredentials.cs" />
     <Compile Include="ActiveDirectoryEnvironment.cs" />
