Updated gemfiles to support faraday.

--- a/ClientRuntimes/Ruby/ms-rest/Gemfile
+++ b/ClientRuntimes/Ruby/ms-rest/Gemfile
@@ -8,4 +8,6 @@ group :development, :local, :test do
   gem 'json'
   gem 'timeliness'
   gem 'concurrent-ruby-ext'
+  gem 'faraday'
+  gem 'faraday-cookie_jar'
 end
