--- a/ClientRuntimes/Ruby/ms-rest-azure/Gemfile
+++ b/ClientRuntimes/Ruby/ms-rest-azure/Gemfile
@@ -6,7 +6,8 @@ gemspec
 group :development, :local, :test do
   gem 'rspec'
   gem 'json'
-  gem 'timeliness'
   gem 'concurrent-ruby-ext'
+  gem 'faraday'
+  gem 'faraday-cookie_jar'
   gem 'ms_rest'
 end
