test changes and code analysis fix

--- a/ClientRuntimes/NodeJS/ClientRuntime.Azure/package.json
+++ b/ClientRuntimes/NodeJS/ClientRuntime.Azure/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "async": "0.2.7",
     "uuid": "2.0.1",
+    "adal-node": "0.1.13",
     "ms-rest": "file:../ClientRuntime"
   },
   "devDependencies": {
@@ -29,8 +30,7 @@
     "xunit-file": "0.0.5",
     "mocha": "2.2.5",
     "should": "5.2.0",
-    "underscore": "*",
-    "adal-node": "0.1.13"
+    "underscore": "*"
   },
   "homepage": "https://github.com/Azure/AutoRest",
   "repository": {
