--- a/ClientRuntimes/CSharp/ClientRuntime.Etw/Microsoft.Rest.ClientRuntime.Etw.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Etw/Microsoft.Rest.ClientRuntime.Etw.nuspec
@@ -12,7 +12,7 @@
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <summary>Provides ETW tracing of \"Microsoft.Rest\" Client Library events.</summary>
     <description>Enables tracing of event messages for AutoRest generated client libraries events via ETW (Event Tracing for Windows). ETW events can be captured by subscribing to the "Microsoft.Rest" event source.</description>
-    <copyright>Copyright © Microsoft Corporation</copyright>
+    <copyright>Copyright (c) Microsoft Corporation</copyright>
     <tags>Microsoft AutoRest ClientRuntime ETW "Event Tracing"</tags>
     <references>
       <group targetFramework="net45">
