Resolving code analysis naming issues

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/ClientRuntime.Azure.Authentication.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Authentication/ClientRuntime.Azure.Authentication.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationTokenProvider.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="UserTokenProvider.cs" />
     <Compile Include="ApplicationTokenCredentials.cs" />
     <Compile Include="ActiveDirectorySettings.cs" />
