--- a/AutoRest/Generators/Ruby/Azure.Ruby/AutoRest.Generator.Azure.Ruby.csproj
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/AutoRest.Generator.Azure.Ruby.csproj
@@ -26,6 +26,7 @@
     <Compile Include="$(SolutionDir)\Tools\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="AzureClientModelExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
