Changed gulp to use gulp_msbuild

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "del": "^1.2.0",
     "glob": "^5.0.13",
     "gulp": "^3.9.0",
+    "gulp-msbuild": "^0.2.12",
     "gulp-debug": "^2.0.1",
     "gulp-dotnet-assembly-info": "^0.1.10",
     "gulp-spawn": "^0.3.0",
