Added dependency sync for client runtime versions

--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "glob": "^5.0.13",
     "gulp": "^3.9.0",
     "gulp-msbuild": "^0.2.12",
+    "gulp-replace": "^0.5.3",
     "gulp-debug": "^2.0.1",
     "gulp-dotnet-assembly-info": "^0.1.10",
     "gulp-spawn": "^0.3.0",
     "gulp-util": "^3.0.6",
+    "require-dir": "^0.3.0",
     "q": "^1.4.1",
     "run-sequence": "^1.1.2",
     "through2": "^2.0.0",
