Added generated CS template files back to csproj

--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/AutoRest.Generator.Azure.NodeJS.csproj
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/AutoRest.Generator.Azure.NodeJS.csproj
@@ -32,6 +32,18 @@
     <Compile Include="TemplateModels\AzureMethodTemplateModel.cs" />
     <Compile Include="TemplateModels\AzureServiceClientTemplateModel.cs" />
     <Compile Include="TemplateModels\AzureMethodGroupTemplateModel.cs" />
+    <Compile Include="Templates\AzureMethodGroupTemplate.cs">
+      <DependentUpon>AzureMethodGroupTemplate.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\AzureMethodTemplate.cs">
+      <DependentUpon>AzureMethodTemplate.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\AzureModelIndexTemplate.cs">
+      <DependentUpon>AzureModelIndexTemplate.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\AzureServiceClientTemplate.cs">
+      <DependentUpon>AzureServiceClientTemplate.cshtml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AutoRest.Core\AutoRest.Core.csproj">
