--- a/AutoRest/AutoRest.Core.Tests/AutoRest.Core.Tests.csproj
+++ b/AutoRest/AutoRest.Core.Tests/AutoRest.Core.Tests.csproj
@@ -41,6 +41,9 @@
     <Compile Include="Resource\SamplePropertyModel.cs" />
     <Compile Include="Resource\SampleServiceClientTemplateModel.cs" />
     <Compile Include="Resource\SampleViewModel.cs" />
+    <Compile Include="Templates\SampleModel.cs">
+      <DependentUpon>SampleModel.cshtml</DependentUpon>
+    </Compile>
     <Compile Include="XUnitExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
