update client runtime version used by package test cases through gulp

--- a/AutoRest/Generators/AcceptanceTests/NugetPackageTest/packages.config
+++ b/AutoRest/Generators/AcceptanceTests/NugetPackageTest/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <!--when we bump up package versions, please the refresh versions here-->
   <package id="Microsoft.Rest.ClientRuntime" version="1.2.0" targetFramework="net45" />
