--- a/ClientRuntimes/Java/build.gradle
+++ b/ClientRuntimes/Java/build.gradle
@@ -1,32 +1,18 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-
-task sourceJar(type: Jar) {
-    from sourceSets.main.allJava
-}
-
-uploadArchives {
+buildscript {
     repositories {
-        mavenDeployer {
-            repository(url: "file://$buildDir/repo")
-            pom.setGroupId 'com.microsoft.rest'
-	    	pom.setArtifactId 'client-runtime'
-	    	pom.setVersion '0.0.1'
-	    	pom.setPackaging 'jar'
-	    	pom.project {
-	            licenses {
-	                license {
-	                    name 'The MIT License (MIT)'
-	                    url 'http://opensource.org/licenses/MIT'
-	                    distribution 'repo'
-	                }
-	            }
-	        }
-        }
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
     }
 }
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'com.bmuschko.nexus'
+
+group = 'com.microsoft.rest'
+version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -39,4 +25,38 @@ dependencies {
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit-dep', version: '4.11'
+}
+
+modifyPom {
+    project {
+        name 'Microsoft AutoRest Runtime for Java'
+        description 'This is the client runtime for AutoRest generated Java clients.'
+        url 'https://github.com/Azure/autorest'
+
+        scm {
+            url 'scm:git:https://github.com/Azure/AutoRest'
+            connection 'scm:git:git://github.com/Azure/AutoRest.git'
+        }
+
+        licenses {
+            license {
+                name 'The MIT License (MIT)'
+                url 'http://opensource.org/licenses/MIT'
+                distribution 'repo'
+            }
+        }
+
+        developers {
+            developer {
+                id 'microsoft'
+                name 'Microsoft'
+            }
+        }
+    }
+}
+
+nexus {
+    sign = true
+    repositoryUrl = "file://$buildDir/repo"
+    snapshotRepositoryUrl = "file://$buildDir/repo-snapshots"
 }
