--- a/ClientRuntimes/Java/build.gradle
+++ b/ClientRuntimes/Java/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+    compile group: 'org.glassfish.jersey.core', 'name': 'jersey-client', version: '2.19'
+    compile group: 'org.glassfish.jersey.connectors', 'name': 'jersey-apache-connector', version: '2.19'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit-dep', version: '4.11'
 }
