--- a/ClientRuntimes/Ruby/ms-rest/Gemfile
+++ b/ClientRuntimes/Ruby/ms-rest/Gemfile
@@ -1,3 +1,6 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License. See License.txt in the project root for license information.
+
 source 'https://rubygems.org'
 
 # Specify your gem's dependencies in ms_rest.gemspec
