--- a/ClientRuntimes/Ruby/ms-rest/Rakefile
+++ b/ClientRuntimes/Ruby/ms-rest/Rakefile
@@ -1,1 +1,4 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License. See License.txt in the project root for license information.
+
 require "bundler/gem_tasks"
