--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -66,6 +66,11 @@ javadoc {
     options.encoding = 'UTF-8'
 }
 
+test {
+    reports.getHtml()
+    reports.html.destination = file("${projectDir}/../../../../TestResults")
+}
+
 task buildRuntime(type: Exec) {
     workingDir "${projectDir}/../../../../ClientRuntimes/Java"
     commandLine 'cmd', '/c', 'gradle', 'uploadArchives'
@@ -95,6 +100,6 @@ task stopserver(type: Exec, dependsOn: 'testcoverage') {
     commandLine 'cmd', '/c', 'forever', 'stop', 'startup/www.js'
 }
 
-compileJava.mustRunAfter 'clean'
+tasks.compileJava.dependsOn 'clean'
 tasks.test.dependsOn 'runserver'
 tasks.test.finalizedBy 'stopserver'
