Seperate runtime and codegen test archives

--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -74,7 +74,7 @@ javadoc {
 
 test {
     reports.getHtml()
-    reports.html.destination = file("${projectDir}/../../../../TestResults")
+    reports.html.destination = file("${projectDir}/../../../../TestResults/JavaCodeGen")
 }
 
 task buildRuntime(type: Exec) {
