--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -24,11 +24,11 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.microsoft.rest', name:'client-runtime', version:'0.0.1-SNAPSHOT'
-    compile group: 'com.squareup.retrofit', name:'retrofit', version:'1.9.0'
-    compile group: 'com.squareup.okhttp', name:'okhttp', version:'2.4.0'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'junit', name: 'junit-dep', version: '4.11'
+    compile 'com.microsoft.rest:client-runtime:0.0.1-SNAPSHOT'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    testCompile 'junit:junit:4.11'
+    testCompile 'junit:junit-dep:4.11'
 }
 
 modifyPom {
