--- a/ClientRuntimes/Java/build.gradle
+++ b/ClientRuntimes/Java/build.gradle
@@ -19,13 +19,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.apache.commons', name:'commons-lang3', version:'3.4'
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
-    compile group: 'com.squareup.retrofit', name:'retrofit', version:'1.9.0'
-    compile group: 'com.squareup.okhttp', name:'okhttp', version:'2.4.0'
-    compile group: 'com.squareup.retrofit', name:'converter-jackson', version:'1.9.0'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'junit', name: 'junit-dep', version: '4.11'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'commons-codec:commons-codec:1.10'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.retrofit:converter-jackson:1.9.0'
+    compile 'com.squareup.retrofit:converter-jackson:1.9.0'
+    testCompile 'junit:junit:4.11'
+    testCompile 'junit:junit-dep:4.11'
 }
 
 modifyPom {
