--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.microsoft.rest:client-runtime:0.0.1-SNAPSHOT'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'joda-time:joda-time:2.8.2'
     testCompile 'junit:junit:4.11'
     testCompile 'junit:junit-dep:4.11'
 }
