--- a/ClientRuntimes/Java/build.gradle
+++ b/ClientRuntimes/Java/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.retrofit:converter-jackson:1.9.0'
-    compile 'com.squareup.retrofit:converter-jackson:1.9.0'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.1.1'
     testCompile 'junit:junit:4.11'
     testCompile 'junit:junit-dep:4.11'
 }
