--- a/AutoRest/Generators/Ruby/Ruby.Tests/Gemfile
+++ b/AutoRest/Generators/Ruby/Ruby.Tests/Gemfile
@@ -2,5 +2,6 @@ source 'https://rubygems.org'
 
 group :development, :local, :test do
   gem 'rspec'
+  gem 'faraday-cookie_jar'
   gem 'ms_rest', path:'../../../../ClientRuntimes/Ruby/ms-rest'
 end
