--- a/AutoRest/Generators/Ruby/Azure.Ruby.Tests/Gemfile
+++ b/AutoRest/Generators/Ruby/Azure.Ruby.Tests/Gemfile
@@ -2,5 +2,9 @@ source 'https://rubygems.org'
 
 group :development, :local, :test do
   gem 'rspec'
+  gem 'json'
+  gem 'concurrent-ruby-ext'
+  gem 'faraday'
+  gem 'faraday-cookie_jar'
   gem 'ms_rest_azure', path:'../../../../ClientRuntimes/Ruby/ms-rest-azure'
 end
