--- a/AutoRest/Generators/Ruby/Ruby.Tests/Gemfile
+++ b/AutoRest/Generators/Ruby/Ruby.Tests/Gemfile
@@ -2,6 +2,9 @@ source 'https://rubygems.org'
 
 group :development, :local, :test do
   gem 'rspec'
+  gem 'json'
+  gem 'concurrent-ruby-ext'
+  gem 'faraday'
   gem 'faraday-cookie_jar'
   gem 'ms_rest', path:'../../../../ClientRuntimes/Ruby/ms-rest'
 end
