Added missed reference to the ms-rest gem in the Azure.Ruby.Tests dependencies.

--- a/AutoRest/Generators/Ruby/Azure.Ruby.Tests/Gemfile
+++ b/AutoRest/Generators/Ruby/Azure.Ruby.Tests/Gemfile
@@ -6,5 +6,6 @@ group :development, :local, :test do
   gem 'concurrent-ruby-ext'
   gem 'faraday'
   gem 'faraday-cookie_jar'
+  gem 'ms_rest', path:'../../../../ClientRuntimes/Ruby/ms-rest'
   gem 'ms_rest_azure', path:'../../../../ClientRuntimes/Ruby/ms-rest-azure'
 end
