Add custom serializer for Byte array

--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -24,6 +24,7 @@ repositories {
 }
 
 dependencies {
+    compile 'commons-codec:commons-codec:1.10'
     compile 'com.microsoft.rest:client-runtime:0.0.1-SNAPSHOT'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
