Added reference to the local version of ms-rest to make tests of ms-rest-azure run.

--- a/ClientRuntimes/Ruby/ms-rest-azure/Gemfile
+++ b/ClientRuntimes/Ruby/ms-rest-azure/Gemfile
@@ -12,7 +12,8 @@ group :development do
   gem 'concurrent-ruby-ext'
   gem 'faraday'
   gem 'faraday-cookie_jar'
-  gem 'ms_rest'
+  # gem 'ms_rest'
+  gem 'ms_rest', path: '../ms-rest' # (TODO: change back to global gem before publishing)
 end
 
 group :test do
