--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'joda-time:joda-time:2.8.2'
+    compile 'javax.validation:validation-api:1.1.0.Final'
     testCompile 'junit:junit:4.11'
     testCompile 'junit:junit-dep:4.11'
 }
