--- a/AutoRest/Generators/Java/Java.Tests/build.gradle
+++ b/AutoRest/Generators/Java/Java.Tests/build.gradle
@@ -90,7 +90,7 @@ task buildRuntime(type: Exec) {
 }
 
 task npmrestore(type: Exec) {
-    workingDir "${projectDir}/../../AcceptanceTests/server"
+    workingDir "${projectDir}/../../../NuGetTests/server"
     commandLine 'cmd', '/c', 'npm', 'install'
 }
 
@@ -99,7 +99,7 @@ task installforever(type: Exec, dependsOn: 'npmrestore') {
 }
 
 task runserver(type: Exec, dependsOn: 'installforever') {
-    workingDir "${projectDir}/../../AcceptanceTests/server"
+    workingDir "${projectDir}/../../../NuGetTests/server"
     commandLine 'cmd', '/c', 'forever', 'start', 'startup/www.js'
 }
 
@@ -109,7 +109,7 @@ task testcoverage(type: JavaExec, dependsOn: 'runserver') {
 }
 
 task stopserver(type: Exec, dependsOn: 'testcoverage') {
-    workingDir "${projectDir}/../../AcceptanceTests/server"
+    workingDir "${projectDir}/../../../NuGetTests/server"
     commandLine 'cmd', '/c', 'forever', 'stop', 'startup/www.js'
 }
 
